tests/should_fail/syntax_let_missing_assign.nv
module main

// SHOULD FAIL: let without assignment operator
// parser expects '=' after the identifier
let x: Int
println(x)
